--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "author": "DuyVD",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "husky": "^8.0.3",
     "nodemon": "^2.0.22"
   },
   "scripts": {
-    "prepare": "husky install"
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
